ADD: 玩家摇骰子移动

--- a/project.json
+++ b/project.json
@@ -6,6 +6,8 @@
     "renderMode"    : 1,
     "jsList"        : [
         "resource.js",
+        "src/sites.js",
+        "src/player.js",
         "src/StartScene.js",
         "src/MainScene.js"
     ]
