ADD: 卡牌逻辑，停站卡，双倍卡，滴滴卡

--- a/project.json
+++ b/project.json
@@ -7,6 +7,7 @@
     "jsList"        : [
         "resource.js",
         "src/sites.js",
+        "src/card.js",
         "src/player.js",
         "src/StartScene.js",
         "src/MainScene.js"
